--- a/Sorry Website/index.html
+++ b/Sorry Website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For my kakashi bro 🥹</title>
+    <title>For someone 🥹</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
